--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "husky": "^8.0.1",
     "pg": "^8.7.3",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
