--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:local": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "deploy": "npm ci && npm run build && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "husky": "^8.0.1",
+    "mysql": "^2.18.1",
     "pg": "^8.7.3",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
